# GCN

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphMatrix.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  README.md  main.cpp  test.cpp  util.h
graphs/: cora.csr  cora.csrra  cora.labels  cora.train  test.csr  test.features
libs/include/: blis.h  rsb_types.h
